--- a/EDA and Cleaning Data.ipynb
+++ b/EDA and Cleaning Data.ipynb
@@ -456,43 +456,43 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>6.7</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>versicolor</td>\n",
+       "      <th>6</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>5.7</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>4.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>111</th>\n",
+       "      <th>51</th>\n",
        "      <td>6.4</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>1.9</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>6.6</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>versicolor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>6.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>2.2</td>\n",
        "      <td>virginica</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>5.8</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>3.9</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>versicolor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>119</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2.2</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.5</td>\n",
+       "      <th>112</th>\n",
+       "      <td>6.8</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>2.1</td>\n",
        "      <td>virginica</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -501,11 +501,11 @@
       ],
       "text/plain": [
        "     sepal_length  sepal_width  petal_length  petal_width     species\n",
-       "77            6.7          3.0           5.0          1.7  versicolor\n",
-       "96            5.7          2.9           4.2          1.3  versicolor\n",
-       "111           6.4          2.7           5.3          1.9   virginica\n",
-       "82            5.8          2.7           3.9          1.2  versicolor\n",
-       "119           6.0          2.2           5.0          1.5   virginica"
+       "6             4.6          3.4           1.4          0.3      setosa\n",
+       "51            6.4          3.2           4.5          1.5  versicolor\n",
+       "75            6.6          3.0           4.4          1.4  versicolor\n",
+       "104           6.5          3.0           5.8          2.2   virginica\n",
+       "112           6.8          3.0           5.5          2.1   virginica"
       ]
      },
      "execution_count": 4,
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1013,7 +1013,7 @@
        "Name: petal_width, dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,7 +1261,7 @@
    "execution_count": 13,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
